# ros-costlens-ai

./: .gitignore  ARCHITECTURE.md  SAF_DEPLOY.md  run.txt
agents/: app.py  env.saf.example  pyproject.toml
agents/deployment_package/bedrock_agentcore-1.3.0.dist-info/: METADATA  RECORD
agents/deployment_package/boto3-1.42.49.dist-info/: RECORD
agents/deployment_package/botocore-1.42.49.dist-info/: RECORD
agents/deployment_package/charset_normalizer-3.4.4.dist-info/: RECORD
agents/deployment_package/httpx-0.28.1.dist-info/: RECORD
agents/deployment_package/jmespath-1.1.0.dist-info/: RECORD
agents/deployment_package/jsonpatch-1.33.dist-info/: RECORD
agents/deployment_package/jsonpointer-3.0.0.dist-info/: RECORD
agents/deployment_package/langchain_aws-1.2.5.dist-info/: METADATA  RECORD
agents/deployment_package/langchain_core-1.2.12.dist-info/: RECORD
agents/deployment_package/langsmith-0.7.2.dist-info/: METADATA  RECORD
agents/deployment_package/numpy-2.2.6.dist-info/: RECORD
agents/deployment_package/orjson-3.11.7.dist-info/: RECORD  WHEEL
agents/deployment_package/ormsgpack-1.12.2.dist-info/: RECORD
agents/deployment_package/pydantic_core-2.41.5.dist-info/: RECORD
agents/deployment_package/pyyaml-6.0.3.dist-info/: RECORD
agents/deployment_package/uuid_utils-0.14.0.dist-info/: RECORD  WHEEL
agents/src/: __init__.py  app.py  checkpointer.py  graph.py  memory.py  state.py  tracing.py
agents/src/agents/: __init__.py  (+5 more)
agents/tests/: test_anomaly_detector.py  test_cost_analyst.py  test_graph.py  test_optimizer.py  test_reporter.py
(+80 files in other folders)
