[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentcore-billing"
version = "0.1.0"
description = "Multi-agent AWS cost intelligence system built on AgentCore + LangGraph"
requires-python = ">=3.11"

dependencies = [
    "bedrock-agentcore>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.0",
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "matplotlib>=3.8.0",
    # Note: aws-opentelemetry-distro is NOT needed for Runtime-hosted agents
    # AgentCore Runtime provides automatic OTEL instrumentation
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6.0",
    "mypy>=1.11",
    "boto3-stubs[ce,athena,cloudwatch,ecs,s3,dynamodb,secretsmanager,support,compute-optimizer]",
]

dashboard = [
    "streamlit>=1.38.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
